# conic

./: CMakeLists.txt
conicLib/: CMakeLists.txt
conicLib/include/: Conic.hpp  ConicPencil.hpp  Constants.hpp  Line2D.hpp  Point2D.hpp  Point2P.hpp  Random.hpp
conicLib/src/: Conic.cpp  ConicPencil.cpp  Line2D.cpp  Line2P.cpp  Point2D.cpp  Point2P.cpp  Random.cpp
main/: CMakeLists.txt
main/src/: Geogebra_conics.cpp  main.cpp
src/: Conic.cpp  Conic.hpp  Line2P.cpp  Line2P.hpp  Point2P.cpp  Point2P.hpp  Random.cpp  Random.hpp  main.cpp
